--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,7 +10,7 @@
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "12.1.7",
-    "com.unity.xr.interaction.toolkit": "1.0.0-pre.6",
+    "com.unity.xr.interaction.toolkit": "2.1.1",
     "com.unity.xr.management": "4.2.1",
     "com.unity.xr.oculus": "3.0.2",
     "com.unity.xr.openxr": "1.4.2",
