--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,20 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/Sounds/CasualGameSounds/DM-CGS-21.wav.meta
+Assets/Sounds/CasualGameSounds/DM-CGS-22.wav
+Assets/Sounds/CasualGameSounds/DM-CGS-22.wav.meta
+Assets/Sounds/CasualGameSounds/DM-CGS-23.wav
+Assets/Sounds/CasualGameSounds/DM-CGS-23.wav.meta
+Assets/Sounds/CasualGameSounds/DM-CGS-24.wav
+Assets/Sounds/CasualGameSounds/DM-CGS-24.wav.meta
+Assets/Sounds/CasualGameSounds/DM-CGS-25.wav
+Assets/Sounds/CasualGameSounds/DM-CGS-25.wav.meta
+Assets/Sounds/CasualGameSounds/DM-CGS-26.wav
+Assets/Sounds/CasualGameSounds/DM-CGS-26.wav.meta
+Assets/Sounds/CasualGameSounds/DM-CGS-27.wav
+Assets/Sounds/CasualGameSounds/DM-CGS-27.wav.meta
+Assets/Sounds/CasualGameSounds/DM-CGS-28.wav
+Assets/Sounds/CasualGameSounds/DM-CGS-28.wav.meta
+Assets/Sounds/CasualGameSounds/DM-CGS-29.wav
+Assets/Sounds/CasualGameSounds/DM-CGS-29.wav.meta
